[package]
name = "pg_rfc8785"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "PostgreSQL extension for RFC 8785 / JCS JSON canonicalization"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_rfc8785"
path = "src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "=0.16.0"
serde_json = "=1.0.145"
serde_json_canonicalizer = "=0.3.1"

[dev-dependencies]
pgrx-tests = "=0.16.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
